chore: 스크립트 명령어 변경
- lnagstar -> langstar

--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
     "name": "langstar-root",
     "private": true,
     "scripts": {
-        "lnagstar-dev": "run-script-os",
-        "lnagstar-dev:win32": "concurrently \"npm run dev --prefix ui\" \"python server/app.py\"",
-        "lnagstar-dev:darwin": "concurrently \"npm run dev --prefix ui\" \"uvicorn server.app:app --reload\"",
-        "lnagstar-dev:linux": "concurrently \"npm run dev --prefix ui\" \"uvicorn server.app:app --reload\"",
+        "langstar-dev": "run-script-os",
+        "langstar-dev:win32": "concurrently \"npm run dev --prefix ui\" \"python server/app.py\"",
+        "langstar-dev:darwin": "concurrently \"npm run dev --prefix ui\" \"uvicorn server.app:app --reload\"",
+        "langstar-dev:linux": "concurrently \"npm run dev --prefix ui\" \"uvicorn server.app:app --reload\"",
         "install": "run-script-os",
         "install:win32": "concurrently \"cd ui && npm install\" \"pip install -r server/requirements.txt\"",
         "install:darwin": "concurrently \"npm install --prefix ui\" \"pip install -r server/requirements.txt\"",
