feat: Python 3.11+ 지원 및 개발 환경 대폭 개선
주요 기능 추가:
- Python 3.11+ 자동 버전 감지 및 지원
- 개발 서버용 에러 처리 및 포트 충돌 감지 기능
- OS별 Python 가상환경 설정 스크립트 생성
- 개발 서버 안전 종료 및 정리 기능

새로 생성된 파일:
- scripts/setup-python.sh (macOS/Linux용 Python 설정)
- scripts/setup-python.bat (Windows용 Python 설정)
- scripts/dev.sh (개발 서버 실행 및 에러 처리)
- scripts/dev.bat (Windows용 개발 서버 실행)

수정된 파일:
- package.json (Python 요구사항 3.11+로 변경, 스크립트 추가)
- README.md (Python 3.11+ 설치 가이드 업데이트)
- server/app.py (한글 메시지를 영어로 변환)

개선사항:
- Python 3.12.7 고정에서 3.11+ 유연한 지원으로 변경
- 자동 Python 버전 감지로 사용자 편의성 향상
- 포트 충돌 시 기존 프로세스 보존 및 안내
- 모든 메시지 영문화로 국제화 지원
- 종합적인 에러 처리 및 문제 해결 가이드 제공

--- a/package.json
+++ b/package.json
@@ -2,17 +2,38 @@
     "name": "langstar-root",
     "private": true,
     "scripts": {
+        "dev": "npm run langstar-dev",
         "langstar-dev": "run-script-os",
-        "langstar-dev:win32": "concurrently \"npm run dev --prefix ui\" \"uvicorn server.app:app --reload\"",
-        "langstar-dev:darwin": "concurrently \"npm run dev --prefix ui\" \"uvicorn server.app:app --reload\"",
-        "langstar-dev:linux": "concurrently \"npm run dev --prefix ui\" \"uvicorn server.app:app --reload\"",
+        "langstar-dev:win32": "scripts\\dev.bat",
+        "langstar-dev:darwin": "chmod +x scripts/dev.sh && scripts/dev.sh",
+        "langstar-dev:linux": "chmod +x scripts/dev.sh && scripts/dev.sh",
         "install": "run-script-os",
-        "install:win32": "concurrently \"cd ui && npm install\" \"pip install -r server/requirements.txt\"",
-        "install:darwin": "concurrently \"npm install --prefix ui\" \"pip install -r server/requirements.txt\"",
-        "install:linux": "concurrently \"npm install --prefix ui\" \"pip install -r server/requirements.txt\""
+        "install:win32": "concurrently \"cd ui && npm install\" \"npm run setup-python:win32\"",
+        "install:darwin": "concurrently \"npm install --prefix ui\" \"npm run setup-python:darwin\"",
+        "install:linux": "concurrently \"npm install --prefix ui\" \"npm run setup-python:linux\"",
+        "setup-python:win32": "scripts\\setup-python.bat",
+        "setup-python:darwin": "chmod +x scripts/setup-python.sh && scripts/setup-python.sh",
+        "setup-python:linux": "chmod +x scripts/setup-python.sh && scripts/setup-python.sh",
+        "server-dev": "run-script-os",
+        "server-dev:win32": "server\\venv\\Scripts\\activate && uvicorn server.app:app --reload",
+        "server-dev:darwin": "source server/venv/bin/activate && uvicorn server.app:app --reload",
+        "server-dev:linux": "source server/venv/bin/activate && uvicorn server.app:app --reload",
+        "check-python": "python3.12 --version",
+        "stop-dev": "run-script-os",
+        "stop-dev:win32": "taskkill /F /IM node.exe /T && taskkill /F /IM python.exe /T",
+        "stop-dev:darwin": "pkill -f \"uvicorn server.app:app\" && pkill -f \"vite\" && pkill -f \"node.*dev\"",
+        "stop-dev:linux": "pkill -f \"uvicorn server.app:app\" && pkill -f \"vite\" && pkill -f \"node.*dev\"",
+        "clean-ports": "run-script-os",
+        "clean-ports:win32": "netstat -ano | findstr :8000 && netstat -ano | findstr :5173",
+        "clean-ports:darwin": "lsof -ti:8000 | xargs kill -9 2>/dev/null || true && lsof -ti:5173 | xargs kill -9 2>/dev/null || true",
+        "clean-ports:linux": "lsof -ti:8000 | xargs kill -9 2>/dev/null || true && lsof -ti:5173 | xargs kill -9 2>/dev/null || true"
     },
     "devDependencies": {
         "concurrently": "^8.2.0",
         "run-script-os": "^1.1.6"
+    },
+    "engines": {
+        "node": ">=16.0.0",
+        "python": ">=3.11.0"
     }
 }
