--- a/ui/package.json
+++ b/ui/package.json
@@ -10,14 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@monaco-editor/react": "^4.6.0",
+    "@tailwindcss/line-clamp": "^0.4.4",
     "lucide-react": "^0.344.0",
+    "nanoid": "^5.0.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.22.3",
     "reactflow": "^11.10.4",
-    "@monaco-editor/react": "^4.6.0",
-    "zustand": "^4.5.0",
-    "nanoid": "^5.0.6",
-    "react-router-dom": "^6.22.3"
+    "zustand": "^4.5.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
