--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -4,7 +4,7 @@ pydantic==2.10.6
 langchain==0.3.21
 langchain-core==0.3.51
 langchain-aws==0.2.17
+langchain-openai==0.2.8
 langgraph==0.5.4
 httpx==0.27.0
 boto3>=1.37.0
-image.png
