--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -5,6 +5,7 @@ langchain==0.3.21
 langchain-core==0.3.51
 langchain-aws==0.2.17
 langchain-openai==0.2.8
+langchain-google-genai==2.0.7
 langgraph==0.5.4
 httpx==0.27.0
 boto3>=1.37.0
