--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -2,10 +2,11 @@ fastapi==0.115.12
 uvicorn[standard]==0.30.1
 pydantic==2.10.6
 langchain==0.3.21
-langchain-core==0.3.51
+langchain-core==0.3.79
 langchain-aws==0.2.17
 langchain-openai==0.2.8
 langchain-google-genai==2.0.7
+langchain_anthropic==0.3.22
 langgraph==0.5.4
 httpx==0.27.0
 boto3>=1.37.0
